--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ SUPABASE_URL=https://xxxxx.supabase.co
 SUPABASE_ANON_KEY=eyJxxx...
 SUPABASE_SERVICE_ROLE=eyJxxx...
 
+# Supabase (public, exposed to frontend)
+NEXT_PUBLIC_SUPABASE_URL=https://xxxxx.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJxxx...
+
 # Application
 APP_BASE_URL=http://localhost:3000
 CURRENCY=eur
