--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
+# Dependencies
+node_modules/
+
+# Next.js
+.next/
+out/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # macOS
 .DS_Store
 **/.DS_Store
 
-# macOS
-.DS_Store
-**/.DS_Store
+# IDE
+.vscode/
+.idea/
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Vercel
+.vercel
