--- a/package.json
+++ b/package.json
@@ -21,6 +21,25 @@
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.0"
-  }
+  },
+  "description": "Application de commande en ligne **Click & Collect** pour food truck. Le client commande et paie en ligne, l'équipe food truck voit les commandes en temps réel.",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/3sims/food-truck-app.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/3sims/food-truck-app/issues"
+  },
+  "homepage": "https://github.com/3sims/food-truck-app#readme"
 }
