flow n8n opérationnel du frontend jusqu'a Twillo

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,12 @@ CURRENCY=eur
 
 # n8n (si besoin)
 N8N_WEBHOOK_URL_STRIPE=https://xxxxx.app.n8n.cloud/webhook/stripe
+
+# Twilio SMS
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your_auth_token
+TWILIO_PHONE_NUMBER=+33612345678
+
+# Stripe (déjà existant normalement)
+STRIPE_SECRET_KEY=sk_test_xxxxx
+STRIPE_WEBHOOK_SECRET=whsec_xxxxx
